--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
-html,
+html
+
+@font-face {
+  font-family: vazir;
+  src: url('../assest/font/Vazirmatn-v.woff2');
+}
+
 body {
   direction: rtl;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: vazir, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
